# OpenCVTest

./: CMakeLists.txt
OpenCvTest/: BinaryTest.cpp  CaptchaConnTest.cpp  CaptchaFloodFillTest.cpp  RectDetect.cpp  TemplateTest.cpp  WatershedSegment(Canny).cpp  binarttest.cpp  captchaTest.cpp  cvFindContoursTest2.cpp  findContoursTest.cpp  grayTest.cpp  main.cpp  test.cpp
OpenCvTest.xcodeproj/: project.pbxproj
OpenCvTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenCvTest.xcodeproj/xcuserdata/XiaoJiaKai.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenCvTest.xcodeproj/xcuserdata/XiaoJiaKai.xcuserdatad/xcschemes/: OpenCvTest.xcscheme  xcschememanagement.plist
